-
Bug
-
Resolution: Done
-
Not Evaluated
-
4.8.0
-
None
-
9d5e721e96f19812a766a4c7d3f8b41f455f507c,74b8a6134a296bbe47ad5e695ee7463c5f1e1130
I've attached a sample project which can be build only when TARGET value doesn't contain whitespaces
For Gerrit Dashboard: QTBUG-24595 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
18390,3 | escape *_script_file usages in MingwMakefileGenerator::writeObjectsPart | 4.8 | qt/qt | Status: MERGED | +2 | 0 |
18553,3 | escape *_script_file usages in MingwMakefileGenerator::writeObjectsPart | master | qt/qtbase | Status: MERGED | +2 | 0 |