escape *_script_file usages in MingwMakefileGenerator::writeObjectsPart

Task-number: QTBUG-24595
Change-Id: I1e78a6015247b9e41ae2b05b50fdedf0613f00f1
Reviewed-by: Oswald Buddenhagen <oswald.buddenhagen@nokia.com>

cregit: 9d5e721e96f19812a766a4c7d3f8b41f455f507c https://github.com/qt/qtbase/commit/9d5e721e96f19812a766a4c7d3f8b41f455f507c